--- a/src/styles/components/App.scss
+++ b/src/styles/components/App.scss
@@ -1,5 +1,5 @@
 .app{
     background-image: url('../../assets/img/background.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: 100%;
 }
