--- a/src/styles/components/Form.scss
+++ b/src/styles/components/Form.scss
@@ -1,6 +1,6 @@
 .form{
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 131px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,6 +27,29 @@
                 margin-bottom: 20px;
                 width: 100%;
             }
+        }
+    }
+}
+
+@media (max-width: 580px) {
+    .form{
+        width: 100%;
+        height: calc(100vh - 131px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        &--container{
+            // box-sizing: border-box;
+            // background: white;
+            // border-radius: 15px;
+            // padding: 30px 50px;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: space-between;
+            // text-align: center;
+            width: 80%;
         }
     }
 }
