--- a/src/styles/components/Home.scss
+++ b/src/styles/components/Home.scss
@@ -1,6 +1,7 @@
 .home{
     width: 100%;
-    height: 100%;
+    // height: 100%;
+    height: calc(100vh - 131px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,8 +25,14 @@
         margin: 0px 20px;
 
         &-h1{
-            font-size: 24px;
+            margin-top: 0;
+            font-size: 24px !important;
             text-align: center;
+        }
+
+        h1{
+            margin-top: 0;
+            font-size: 30px;
         }
 
         &-form{
@@ -48,4 +55,43 @@
 
 .container-small{
     height: 250px;
+}
+
+@media (max-width: 768px) {
+    .home{
+        flex-direction: column;
+        margin: 20px 0;
+
+        &--container{
+            margin: 20px 0;
+            // width: 80%;
+            
+
+
+            &-form{
+                width: 90%;
+            }
+        }
+    }
+}
+
+@media (max-width: 580px) {
+    .home{
+        // flex-direction: column;
+
+        &--container{
+            width: 80%;
+
+            &-h1{
+                margin-top: 0;
+                font-size: 20px !important;
+                text-align: center;
+            }
+        }
+        
+
+        h1{
+            font-size: 30px;
+        }
+    }
 }
