--- a/src/styles/components/Main.scss
+++ b/src/styles/components/Main.scss
@@ -1,6 +1,12 @@
 .Main{
    width: 100%;
-   height: 90vh;
+   // height: 90vh;
    display: flex;
    justify-content: center;
+}
+
+@media (max-width: 768px) {
+   .Main{
+      margin-top: 200px;
+   }
 }
