--- a/src/styles/components/Head.scss
+++ b/src/styles/components/Head.scss
@@ -18,22 +18,12 @@
             color: black;
             font-weight: bold;
             font-size: 24px;
+            font-style: italic;
         }
     }
 
 
 }
-
-// @media (max-width:768px) {
-//     .header{
-//     }
-//     .burguer-icon{
-//         display: block;
-//     }
-//     .header--content{
-//         width: 90%;
-//     }
-// }
 
 @media (max-width: 768px) {
     .header{
